--- a/src/api/docker-stacks/dependencies.yml
+++ b/src/api/docker-stacks/dependencies.yml
@@ -5,14 +5,17 @@ version: '3.1'
 services:
 
   db:
-    image: mysql
-    command: --default-authentication-plugin=mysql_native_password
+    image: postgres
     restart: always
     ports: 
-      - 3306:3306
+      - 15432:5432
+    volumes:
+      - ./.postgres/data:/var/lib/postgresql/data/
     environment:
-      MYSQL_DATABASE: url-shortener
-      MYSQL_ROOT_PASSWORD: 12345678a
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: url-shortener
+
   redis:
     image: redis
     restart: always
